This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Server Fixes

--CURSE MY BABY now always targets most-recent baby, whether dead or alive
  (code has been simplified).  Fixes #546



Version 311   2020-February-13

--Fixed so that offspring baby arrow adjusts to point toward carried baby.




Server Fixes

--Fixed baby and leader arrows and messages to make the coordinates birth-pos
  relative (no more new babies born 7000 meters away).

--Fixed getLeadershipName server-side to correctly explore full depth of tree
  and not count levels incorrectly (before, a single leader with lots of
  followers would be described by the server as a supreme empress mistakenly).
  Thanks Twisted and Tipy.

--Sick, wounded, and murder-weapon-holding people can no longer join posses.
  Fixes #539

--Added a daily killHitLog, tracking kill hits landed by solo players or
  posses, and healing done to cancel kill hits.

--Fixed case of force-drop causing item to disappear if all matching floor or
  biome tiles are full.  Now searches for a drop spot off-floor and then
  off-biome.

--Added fail-safe case to prevent dropping an item in a bad biome at the edge
  of the bad biome no matter what.  Should correct for any remaining client
  pathfinding glitches that result in dropping stuff in a bad biome.  Fixes #541

--Trying one curse token every 15 minutes instead of every 30 minutes.

--Can't remove floor in bad biome.

--Active curses from offline players count as an additional factor in
  determining your curse blocked radius.  If T is the total number of curses
  (online players and offline players) against you, then T^2 is added to your
  blocked radius.  Note that the top player has 103 people with active curses
  against them.

--No more solo kills in populated areas.  Min posse size for landing a kill is
  now 50% of the non-baby population in a 30-tile raidius, capped at 3.  So in